src/test/deca/context/invalid/class/field_void.deca
// Description:
//    Test de déclaration de la même classe 2 fois
//
//                                          (Rule 2.)5
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//    Context: erreur puisqu'on definit un champ de type void dans une classe
//
// Historique:
//    cree le 20/01/2022


    class A{
       int field ;
       void field1  ;
    }

{

}